<resources>
    <string name="app_name">Computer Whiz Store</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Employee Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_data_found">No Data Found</string>
    <string name="search_here">Search here</string>
    <string name="filter">Filter</string>
    <string name="add_modify_inventory">Add/Modify Inventory</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="price_in_cad">Price in CAD</string>
    <string name="quantity">Quantity</string>
    <string name="brand">Brand</string>
    <string name="add_modify_customer">Add/Modify Customer</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="address_line1">Address Line1</string>
    <string name="address_line2">Address Line2</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="add_modify_address">Add/Modify Address</string>
    <string name="add_address">Add Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="create_order">Create Order</string>
    <string name="proceed">Proceed</string>
    <string name="total_qty">Total Qty:</string>
    <string name="total_price">Total Price:</string>
    <string name="customer_details">Customer Details</string>
    <string name="address">Address</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_customer_and_address">Select Customer and Address</string>
    <string name="order_details">Order Details</string>
    <string name="select_address">Select Address</string>
    <string name="total_tax">Total Tax</string>
    <string name="total_discount">Total Discount</string>
    <string name="sub_total">Sub Total:</string>
    <string name="product_details">Product Details</string>
    <string name="invoice">Invoice</string>
    <string name="packaging_slip">Packaging Slip</string>
    <string name="close">Close</string>
    <string name="print">Print</string>
    <string name="welcome_to_computer_whiz_store">Welcome To Computer Whiz Store</string>
    <string name="sales_overview">Sales Overview</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="from_address">From Address</string>
    <string name="store_address">Computer Whiz Store\nNew WestMinster\nRoyal Avenue\nBC - V5S 7Y6, Canada.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="packaging_nslips">Packaging\nSlips</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="customers">Customers</string>
    <string name="sales_reports">Sales Reports</string>
    <string name="logout">Logout</string>

</resources>
