<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:paddingStart="@dimen/twentyfive_dp"
            android:paddingTop="@dimen/thirtyfive_dp"
            android:paddingEnd="@dimen/twentyfive_dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/seven_dp"
                android:background="@drawable/round_background"
                android:hint="@string/address_line1"
                android:inputType="text"
                android:paddingStart="@dimen/fifteen_dp"
                android:paddingTop="@dimen/eight_dp"
                android:paddingEnd="@dimen/fifteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/seven_dp"
                android:background="@drawable/round_background"
                android:hint="@string/address_line2"
                android:inputType="text"
                android:paddingStart="@dimen/fifteen_dp"
                android:paddingTop="@dimen/eight_dp"
                android:paddingEnd="@dimen/fifteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/seven_dp"
                android:background="@drawable/round_background"
                android:hint="@string/city"
                android:inputType="text"
                android:paddingStart="@dimen/fifteen_dp"
                android:paddingTop="@dimen/eight_dp"
                android:paddingEnd="@dimen/fifteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/seven_dp"
                android:background="@drawable/round_background"
                android:hint="@string/province"
                android:inputType="text"
                android:paddingStart="@dimen/fifteen_dp"
                android:paddingTop="@dimen/eight_dp"
                android:paddingEnd="@dimen/fifteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/seven_dp"
                android:background="@drawable/round_background"
                android:hint="@string/zipcode"
                android:inputType="text"
                android:paddingStart="@dimen/fifteen_dp"
                android:paddingTop="@dimen/eight_dp"
                android:paddingEnd="@dimen/fifteen_dp"
                android:paddingBottom="@dimen/eight_dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAddAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:background="@drawable/red_round_bg_selector"
                android:gravity="center"
                android:padding="@dimen/ten_dp"
                android:text="@string/add_modify_address"
                android:textColor="@color/btn_text_color_red"
                android:textSize="@dimen/seventeen_sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</layout>
